buttons alignment issue fixed

--- a/src/Components/BlogTile/BlogTile.css
+++ b/src/Components/BlogTile/BlogTile.css
@@ -46,3 +46,8 @@
   font-size: small;
   color: darkcyan;
 }
+
+.BlogTile__Actions {
+  display: flex;
+  justify-content: flex-end;
+}
